1991-06-28  dickey@software.org

	* src/ded.c, src/deddoit.c, src/ftree.c, src/sortset.c:
	lint (apollo sr10.3)

	* src/ded.h: lint (defined 'blip()')

	* src/version.h:
	corrected code which knows about effective/real user-id
	(e.g., flag for executable, permission for chmod).
	Added P-sort (sorts extended-acl-flag).

	* src/ded.hlp, src/sortset.c: added P-sort

	* src/dedsort.c:
	added P-sort (same as p-sort, but keeps "+" for apollo-sr10
	extended-acls sorted into groups)

	* src/dedline.c:
	corrected code which tests for user's id (look at effective
	uid, not real-uid).

	* src/ded2s.c:
	corrected code which tests for executable-access (must look
	at effective-id, not real-id).

1991-06-20  dickey@software.org

	* src/ded.c: don't need "-" special argument to make pipe-args.

1991-06-11  dickey@software.org

	* src/dedsigs.c: lint (apollo sr10.2)

1991-06-11  ste_cm@software.org

	* src/dedsigs.c: BASELINE Tue Jun 11 08:46:03 1991 -- apollo sr10.3

1991-06-05  dickey@software.org

	* Makefile: cleanup install-rule

1991-06-05  ste_cm@software.org

	* Makefile: BASELINE Mon Jun 10 10:09:56 1991 -- apollo sr10.3

1991-06-04  dickey@software.org

	* src/dedtype.c:
	forgot to reset column on successive blank-lines that are
	suppressed.

1991-06-04  ste_cm@software.org

	* src/dedtype.c: BASELINE Mon Jun 10 10:09:56 1991 -- apollo sr10.3

1991-06-04  dickey@software.org

	* src/ftree.c:
	corrected logic in q/Q/F/B commands which caused program to
	hang when call on 'fd_ring()' failed to find a path.

1991-06-04  ste_cm@software.org

	* src/ftree.c: BASELINE Mon Jun 10 10:09:56 1991 -- apollo sr10.3

1991-05-31  dickey@software.org

	* src/version.h:
	highlight the subtree in ftree 'R' command. mods for apollo
	sr10.3

1991-05-31  ste_cm@software.org

	* src/version.h: BASELINE Mon Jun 10 10:09:56 1991 -- apollo sr10.3

1991-05-31  dickey@software.org

	* src/showpath.c:
	added 'base' argument to control highlighting of a portion
	of the path.
