@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19910628
+MANIFEST for ded, version t19910701
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 Makefile                        top-level makefile for unix directory editor
